--- a/index.html
+++ b/index.html
@@ -530,14 +530,14 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-window-stack"></i></div>
-            <h4><a href="">Full-Stack Development</a></h4>
+            <h4><a href="">Software Development</a></h4>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-code"></i></div>
-            <h4><a href="">Software Development</a></h4>
+            <h4><a href="">Data Engineering</a></h4>
           </div>
         </div>
 
@@ -551,21 +551,21 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-front"></i></div>
-            <h4><a href="">Front-End Development</a></h4>
+            <h4><a href="">ETL Processes</a></h4>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4><a href="">Administration Support</a></h4>
+            <h4><a href="">Data Modeling</a></h4>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-info-circle"></i></div>
-            <h4><a href="">Help Desk Support</a></h4>
+            <h4><a href="">Data Pipeline Design</a></h4>
           </div>
         </div>
 
